--- a/values.yaml
+++ b/values.yaml
@@ -43,7 +43,7 @@ cp-zookeeper:
 cp-kafka:
   enabled: true
   brokers: 3
-  image: confluentinc/cp-enterprise-kafka
+  image: confluentinc/cp-kafka
   imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
   ## https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
@@ -151,16 +151,16 @@ cp-ksql-server:
 ## ------------------------------------------------------
 ## Control Center
 ## ------------------------------------------------------
-cp-control-center:
-  enabled: true
-  image: confluentinc/cp-enterprise-control-center
-  imageTag: 6.1.0
+#cp-control-center:
+#  enabled: true
+#  image: confluentinc/cp-enterprise-control-center
+#  imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
   ## https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
-  imagePullSecrets:
+##  imagePullSecrets:
   #  - name: "regcred"
-  heapOptions: "-Xms512M -Xmx512M"
-  resources: {}
+##  heapOptions: "-Xms512M -Xmx512M"
+##  resources: {}
   ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
   ## and remove the curly braces after 'resources:'
   #  limits:
